// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`kg-views.stories snapshots > should cover graph(3 states) and character-card(3 states) story snapshots > character-card-complete 1`] = `
<div
  class="h-screen w-[340px]"
>
  <section
    class="h-full min-h-0 overflow-auto bg-[var(--color-bg-base)] p-3 space-y-3 "
    data-testid="character-card-list"
  >
    <button
      class="w-full text-left p-3 rounded-[var(--radius-xl)] border border-[var(--color-border-default)] bg-[var(--color-bg-surface)] hover:border-[var(--color-border-hover)] transition-colors"
      data-testid="character-card-c-1"
      type="button"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="w-10 h-10 rounded-full flex items-center justify-center text-sm font-medium border border-[var(--color-border-default)] text-[var(--color-node-character)] bg-[var(--color-bg-base)]"
        >
          林
        </div>
        <div
          class="min-w-0 flex-1"
        >
          <div
            class="flex items-center gap-2"
          >
            <p
              class="text-sm font-medium text-[var(--color-fg-default)] truncate"
            >
              林远
            </p>
            <span
              class="text-[10px] px-2 py-0.5 rounded-full bg-[var(--color-bg-hover)] text-[var(--color-fg-subtle)] border border-[var(--color-border-default)]"
            >
              角色
            </span>
          </div>
          <ul
            class="mt-2 space-y-1"
          >
            <li
              class="text-xs text-[var(--color-fg-subtle)]"
            >
              年龄: 28
            </li>
            <li
              class="text-xs text-[var(--color-fg-subtle)]"
            >
              定位: protagonist
            </li>
            <li
              class="text-xs text-[var(--color-fg-subtle)]"
            >
              特征: 冷静 / 克制
            </li>
          </ul>
          <p
            class="mt-2 text-xs text-[var(--color-fg-muted)]"
          >
            关系 4 条
          </p>
        </div>
      </div>
    </button>
    <button
      class="w-full text-left p-3 rounded-[var(--radius-xl)] border border-[var(--color-border-default)] bg-[var(--color-bg-surface)] hover:border-[var(--color-border-hover)] transition-colors"
      data-testid="character-card-c-2"
      type="button"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="w-10 h-10 rounded-full flex items-center justify-center text-sm font-medium border border-[var(--color-border-default)] text-[var(--color-node-character)] bg-[var(--color-bg-base)]"
        >
          张
        </div>
        <div
          class="min-w-0 flex-1"
        >
          <div
            class="flex items-center gap-2"
          >
            <p
              class="text-sm font-medium text-[var(--color-fg-default)] truncate"
            >
              张薇
            </p>
            <span
              class="text-[10px] px-2 py-0.5 rounded-full bg-[var(--color-bg-hover)] text-[var(--color-fg-subtle)] border border-[var(--color-border-default)]"
            >
              角色
            </span>
          </div>
          <ul
            class="mt-2 space-y-1"
          >
            <li
              class="text-xs text-[var(--color-fg-subtle)]"
            >
              年龄: 26
            </li>
            <li
              class="text-xs text-[var(--color-fg-subtle)]"
            >
              定位: ally
            </li>
            <li
              class="text-xs text-[var(--color-fg-subtle)]"
            >
              特征: 果断 / 敏锐
            </li>
          </ul>
          <p
            class="mt-2 text-xs text-[var(--color-fg-muted)]"
          >
            关系 2 条
          </p>
        </div>
      </div>
    </button>
  </section>
</div>
`;

exports[`kg-views.stories snapshots > should cover graph(3 states) and character-card(3 states) story snapshots > character-card-empty 1`] = `
<div
  class="h-screen w-[340px]"
>
  <section
    class="h-full flex items-center justify-center p-4 bg-[var(--color-bg-base)] "
    data-testid="character-card-list-empty"
  >
    <div
      class="text-center space-y-3"
    >
      <p
        class="text-sm text-[var(--color-fg-muted)]"
      >
        暂无角色，开始创建你的第一个角色
      </p>
      <button
        class="px-4 py-2 text-sm font-medium rounded-[var(--radius-md)] bg-[var(--color-fg-default)] text-[var(--color-fg-inverse)] hover:bg-[var(--color-fg-muted)] transition-colors"
        type="button"
      >
        创建角色
      </button>
    </div>
  </section>
</div>
`;

exports[`kg-views.stories snapshots > should cover graph(3 states) and character-card(3 states) story snapshots > character-card-partial 1`] = `
<div
  class="h-screen w-[340px]"
>
  <section
    class="h-full min-h-0 overflow-auto bg-[var(--color-bg-base)] p-3 space-y-3 "
    data-testid="character-card-list"
  >
    <button
      class="w-full text-left p-3 rounded-[var(--radius-xl)] border border-[var(--color-border-default)] bg-[var(--color-bg-surface)] hover:border-[var(--color-border-hover)] transition-colors"
      data-testid="character-card-c-partial"
      type="button"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="w-10 h-10 rounded-full flex items-center justify-center text-sm font-medium border border-[var(--color-border-default)] text-[var(--color-node-character)] bg-[var(--color-bg-base)]"
        >
          神
        </div>
        <div
          class="min-w-0 flex-1"
        >
          <div
            class="flex items-center gap-2"
          >
            <p
              class="text-sm font-medium text-[var(--color-fg-default)] truncate"
            >
              神秘老人
            </p>
            <span
              class="text-[10px] px-2 py-0.5 rounded-full bg-[var(--color-bg-hover)] text-[var(--color-fg-subtle)] border border-[var(--color-border-default)]"
            >
              角色
            </span>
          </div>
          <ul
            class="mt-2 space-y-1"
          >
            <li
              class="text-xs text-[var(--color-fg-subtle)]"
            >
              暂无关键属性
            </li>
          </ul>
          <p
            class="mt-2 text-xs text-[var(--color-fg-muted)]"
          >
            关系 0 条
          </p>
        </div>
      </div>
    </button>
  </section>
</div>
`;

exports[`kg-views.stories snapshots > should cover graph(3 states) and character-card(3 states) story snapshots > graph-empty 1`] = `
<div
  class="h-screen w-full"
>
  <div
    class="flex flex-col h-full w-full bg-[var(--color-bg-base)] overflow-hidden "
  >
    <header
      class="h-12 flex-shrink-0 bg-[var(--color-bg-surface)] border-b border-[var(--color-border-default)] flex items-center justify-between px-4 z-30"
    >
      <div
        class="flex items-center gap-4 w-[240px]"
      >
        <h1
          class="text-sm font-medium tracking-wide text-[var(--color-fg-default)]"
        >
          Knowledge Graph
        </h1>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer bg-[var(--color-bg-raised)] text-[var(--color-fg-default)] border-[var(--color-border-hover)]"
        >
          All
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-character)]"
          />
          Roles
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-location)]"
          />
          Locations
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-event)]"
          />
          Events
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-item)]"
          />
          Items
        </button>
      </div>
      <div
        class="flex items-center gap-3 w-[240px] justify-end"
      >
        <div
          class="flex items-center bg-[var(--color-bg-raised)] rounded border border-[var(--color-border-default)]"
        >
          <button
            aria-label="Zoom out"
            class="p-1.5 text-[var(--color-fg-muted)] hover:text-[var(--color-fg-default)] hover:bg-[var(--color-bg-hover)] transition-colors"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
          <span
            class="text-[10px] w-8 text-center text-[var(--color-fg-subtle)]"
          >
            100
            %
          </span>
          <button
            aria-label="Zoom in"
            class="p-1.5 text-[var(--color-fg-muted)] hover:text-[var(--color-fg-default)] hover:bg-[var(--color-bg-hover)] transition-colors"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium cursor-pointer select-none transition-colors duration-[var(--duration-fast)] ease-[var(--ease-default)] overflow-hidden max-w-full focus-visible:outline focus-visible:outline-[length:var(--ring-focus-width)] focus-visible:outline-offset-[var(--ring-focus-offset)] focus-visible:outline-[var(--color-ring-focus)] disabled:opacity-50 disabled:cursor-not-allowed bg-[var(--color-fg-default)] text-[var(--color-fg-inverse)] border-0 hover:bg-[var(--color-fg-muted)] active:bg-[var(--color-fg-subtle)] h-7 px-3 text-xs rounded-[var(--radius-sm)] whitespace-nowrap flex-shrink-0"
          type="button"
        >
          <span
            class="inline-flex items-center gap-2 truncate"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
            Add Node
          </span>
        </button>
      </div>
    </header>
    <main
      class="flex-1 relative overflow-hidden"
    >
      <div
        class="absolute inset-0 flex items-center justify-center"
      >
        <div
          class="text-center space-y-4"
        >
          <div
            class="w-16 h-16 mx-auto rounded-full border-2 border-dashed border-[var(--color-border-default)] flex items-center justify-center"
          >
            <svg
              class="text-[var(--color-fg-subtle)]"
              fill="none"
              height="32"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="32"
            >
              <circle
                cx="12"
                cy="5"
                r="3"
              />
              <circle
                cx="5"
                cy="19"
                r="3"
              />
              <circle
                cx="19"
                cy="19"
                r="3"
              />
              <line
                x1="12"
                x2="5"
                y1="8"
                y2="16"
              />
              <line
                x1="12"
                x2="19"
                y1="8"
                y2="16"
              />
            </svg>
          </div>
          <div>
            <p
              class="text-sm text-[var(--color-fg-muted)]"
            >
              暂无实体，点击添加你的第一个角色或地点
            </p>
            <p
              class="text-xs text-[var(--color-fg-subtle)] mt-1"
            >
              你可以在关系图中拖拽节点并建立关系
            </p>
          </div>
          <button
            class="inline-flex items-center gap-2 px-4 py-2 bg-[var(--color-fg-default)] text-[var(--color-fg-inverse)] text-sm font-medium rounded-[var(--radius-md)] hover:bg-[var(--color-fg-muted)] transition-colors"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
            添加节点
          </button>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`kg-views.stories snapshots > should cover graph(3 states) and character-card(3 states) story snapshots > graph-minimal 1`] = `
<div
  class="h-screen w-full"
>
  <div
    class="flex flex-col h-full w-full bg-[var(--color-bg-base)] overflow-hidden "
  >
    <header
      class="h-12 flex-shrink-0 bg-[var(--color-bg-surface)] border-b border-[var(--color-border-default)] flex items-center justify-between px-4 z-30"
    >
      <div
        class="flex items-center gap-4 w-[240px]"
      >
        <h1
          class="text-sm font-medium tracking-wide text-[var(--color-fg-default)]"
        >
          Knowledge Graph
        </h1>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer bg-[var(--color-bg-raised)] text-[var(--color-fg-default)] border-[var(--color-border-hover)]"
        >
          All
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-character)]"
          />
          Roles
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-location)]"
          />
          Locations
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-event)]"
          />
          Events
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-item)]"
          />
          Items
        </button>
      </div>
      <div
        class="flex items-center gap-3 w-[240px] justify-end"
      >
        <div
          class="flex items-center bg-[var(--color-bg-raised)] rounded border border-[var(--color-border-default)]"
        >
          <button
            aria-label="Zoom out"
            class="p-1.5 text-[var(--color-fg-muted)] hover:text-[var(--color-fg-default)] hover:bg-[var(--color-bg-hover)] transition-colors"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
          <span
            class="text-[10px] w-8 text-center text-[var(--color-fg-subtle)]"
          >
            100
            %
          </span>
          <button
            aria-label="Zoom in"
            class="p-1.5 text-[var(--color-fg-muted)] hover:text-[var(--color-fg-default)] hover:bg-[var(--color-bg-hover)] transition-colors"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium cursor-pointer select-none transition-colors duration-[var(--duration-fast)] ease-[var(--ease-default)] overflow-hidden max-w-full focus-visible:outline focus-visible:outline-[length:var(--ring-focus-width)] focus-visible:outline-offset-[var(--ring-focus-offset)] focus-visible:outline-[var(--color-ring-focus)] disabled:opacity-50 disabled:cursor-not-allowed bg-[var(--color-fg-default)] text-[var(--color-fg-inverse)] border-0 hover:bg-[var(--color-fg-muted)] active:bg-[var(--color-fg-subtle)] h-7 px-3 text-xs rounded-[var(--radius-sm)] whitespace-nowrap flex-shrink-0"
          type="button"
        >
          <span
            class="inline-flex items-center gap-2 truncate"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
            Add Node
          </span>
        </button>
      </div>
    </header>
    <main
      class="flex-1 relative overflow-hidden"
    >
      <div
        class="absolute inset-0 w-full h-full cursor-grab active:cursor-grabbing"
        data-testid="knowledge-graph-canvas"
      >
        <div
          class="absolute inset-0 pointer-events-none opacity-20"
          style="background-image: radial-gradient(circle, var(--color-border-default) 1px, transparent 1px); background-size: 24px 24px;"
        />
        <div
          class="absolute inset-0 w-full h-full transition-transform duration-100 ease-out"
          style="transform: translate(0px, 0px) scale(1); transform-origin: 0 0;"
        >
          <svg
            class="absolute inset-0 w-full h-full pointer-events-none z-0"
          >
            <defs>
              <marker
                id="arrowhead"
                markerHeight="7"
                markerWidth="10"
                orient="auto"
                refX="28"
                refY="3.5"
              >
                <polygon
                  fill="var(--color-fg-subtle)"
                  points="0 0, 10 3.5, 0 7"
                />
              </marker>
              <marker
                id="arrowhead-selected"
                markerHeight="7"
                markerWidth="10"
                orient="auto"
                refX="28"
                refY="3.5"
              >
                <polygon
                  fill="var(--color-node-character)"
                  points="0 0, 10 3.5, 0 7"
                />
              </marker>
            </defs>
          </svg>
          <div
            class="w-12 h-12 flex items-center justify-center bg-[var(--color-bg-surface)] border absolute cursor-grab transition-[box-shadow,transform] duration-[var(--duration-normal)] z-10 select-none active:cursor-grabbing rounded-full"
            data-node-id="n-minimal"
            style="top: 240px; left: 380px; transform: translate(-50%, -50%); border-color: var(--color-node-character);"
          >
            <div
              class="flex items-center justify-center "
            >
              <span
                class="text-sm font-medium"
                style="color: var(--color-node-character);"
              >
                林
              </span>
            </div>
            <div
              class="absolute top-14 left-1/2 -translate-x-1/2 text-[11px] whitespace-nowrap px-1.5 py-0.5 rounded pointer-events-none text-[var(--color-fg-default)] opacity-90 transition-opacity duration-[var(--duration-fast)]"
              style="background-color: color-mix(in srgb, var(--color-bg-base) 80%, transparent);"
            >
              林小雨
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute bottom-6 right-6 z-30"
      >
        <div
          class="bg-[var(--color-bg-surface)] border border-[var(--color-border-default)] rounded p-3 flex flex-col gap-2 "
        >
          <div
            class="text-[10px] uppercase tracking-wider text-[var(--color-fg-subtle)] font-medium mb-1"
          >
            Graph Legend
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-2 h-2 border rounded-full"
              style="border-color: var(--color-node-character); background-color: color-mix(in srgb, var(--color-node-character) 10%, transparent);"
            />
            <span
              class="text-[11px] text-[var(--color-fg-muted)]"
            >
              Character
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-2 h-2 border rounded-sm"
              style="border-color: var(--color-node-location); background-color: color-mix(in srgb, var(--color-node-location) 10%, transparent);"
            />
            <span
              class="text-[11px] text-[var(--color-fg-muted)]"
            >
              Location
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-2 h-2 border rounded-sm rotate-45"
              style="border-color: var(--color-node-event); background-color: color-mix(in srgb, var(--color-node-event) 10%, transparent);"
            />
            <span
              class="text-[11px] text-[var(--color-fg-muted)]"
            >
              Event
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-2 h-2 border rounded-full"
              style="border-color: var(--color-node-item); background-color: color-mix(in srgb, var(--color-node-item) 10%, transparent);"
            />
            <span
              class="text-[11px] text-[var(--color-fg-muted)]"
            >
              Item
            </span>
          </div>
        </div>
      </div>
      <div
        class="absolute bottom-6 left-6 z-30"
      >
        <button
          aria-label="Add node"
          class="w-10 h-10 rounded-full bg-[var(--color-fg-default)] text-[var(--color-fg-inverse)] hover:bg-[var(--color-fg-muted)] shadow-lg flex items-center justify-center transition-transform hover:scale-105"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`kg-views.stories snapshots > should cover graph(3 states) and character-card(3 states) story snapshots > graph-multi-node 1`] = `
<div
  class="h-screen w-full"
>
  <div
    class="flex flex-col h-full w-full bg-[var(--color-bg-base)] overflow-hidden "
  >
    <header
      class="h-12 flex-shrink-0 bg-[var(--color-bg-surface)] border-b border-[var(--color-border-default)] flex items-center justify-between px-4 z-30"
    >
      <div
        class="flex items-center gap-4 w-[240px]"
      >
        <h1
          class="text-sm font-medium tracking-wide text-[var(--color-fg-default)]"
        >
          Knowledge Graph
        </h1>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer bg-[var(--color-bg-raised)] text-[var(--color-fg-default)] border-[var(--color-border-hover)]"
        >
          All
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-character)]"
          />
          Roles
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-location)]"
          />
          Locations
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-event)]"
          />
          Events
        </button>
        <button
          class="px-3 py-1 rounded-full text-xs font-medium border transition-all duration-[var(--duration-fast)] flex items-center gap-2 cursor-pointer text-[var(--color-fg-muted)] border-transparent hover:text-[var(--color-fg-default)] hover:border-[var(--color-border-hover)]"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-[var(--color-node-item)]"
          />
          Items
        </button>
      </div>
      <div
        class="flex items-center gap-3 w-[240px] justify-end"
      >
        <div
          class="flex items-center bg-[var(--color-bg-raised)] rounded border border-[var(--color-border-default)]"
        >
          <button
            aria-label="Zoom out"
            class="p-1.5 text-[var(--color-fg-muted)] hover:text-[var(--color-fg-default)] hover:bg-[var(--color-bg-hover)] transition-colors"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
          <span
            class="text-[10px] w-8 text-center text-[var(--color-fg-subtle)]"
          >
            100
            %
          </span>
          <button
            aria-label="Zoom in"
            class="p-1.5 text-[var(--color-fg-muted)] hover:text-[var(--color-fg-default)] hover:bg-[var(--color-bg-hover)] transition-colors"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium cursor-pointer select-none transition-colors duration-[var(--duration-fast)] ease-[var(--ease-default)] overflow-hidden max-w-full focus-visible:outline focus-visible:outline-[length:var(--ring-focus-width)] focus-visible:outline-offset-[var(--ring-focus-offset)] focus-visible:outline-[var(--color-ring-focus)] disabled:opacity-50 disabled:cursor-not-allowed bg-[var(--color-fg-default)] text-[var(--color-fg-inverse)] border-0 hover:bg-[var(--color-fg-muted)] active:bg-[var(--color-fg-subtle)] h-7 px-3 text-xs rounded-[var(--radius-sm)] whitespace-nowrap flex-shrink-0"
          type="button"
        >
          <span
            class="inline-flex items-center gap-2 truncate"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
            Add Node
          </span>
        </button>
      </div>
    </header>
    <main
      class="flex-1 relative overflow-hidden"
    >
      <div
        class="absolute inset-0 w-full h-full cursor-grab active:cursor-grabbing"
        data-testid="knowledge-graph-canvas"
      >
        <div
          class="absolute inset-0 pointer-events-none opacity-20"
          style="background-image: radial-gradient(circle, var(--color-border-default) 1px, transparent 1px); background-size: 24px 24px;"
        />
        <div
          class="absolute inset-0 w-full h-full transition-transform duration-100 ease-out"
          style="transform: translate(0px, 0px) scale(1); transform-origin: 0 0;"
        >
          <svg
            class="absolute inset-0 w-full h-full pointer-events-none z-0"
          >
            <defs>
              <marker
                id="arrowhead"
                markerHeight="7"
                markerWidth="10"
                orient="auto"
                refX="28"
                refY="3.5"
              >
                <polygon
                  fill="var(--color-fg-subtle)"
                  points="0 0, 10 3.5, 0 7"
                />
              </marker>
              <marker
                id="arrowhead-selected"
                markerHeight="7"
                markerWidth="10"
                orient="auto"
                refX="28"
                refY="3.5"
              >
                <polygon
                  fill="var(--color-node-character)"
                  points="0 0, 10 3.5, 0 7"
                />
              </marker>
            </defs>
            <g
              data-edge-id="e-1"
            >
              <line
                class="transition-all duration-[var(--duration-fast)]"
                marker-end="url(#arrowhead)"
                opacity="0.7"
                stroke="var(--color-fg-subtle)"
                stroke-width="1"
                x1="320"
                x2="520"
                y1="200"
                y2="180"
              />
              <rect
                fill="var(--color-bg-base)"
                height="16"
                rx="4"
                ry="4"
                stroke="transparent"
                stroke-width="1"
                width="38"
                x="401"
                y="182"
              />
              <text
                class="select-none pointer-events-none"
                dominant-baseline="central"
                fill="var(--color-fg-subtle)"
                font-family="var(--font-family-ui)"
                font-size="10"
                text-anchor="middle"
                x="420"
                y="190"
              >
                活动于
              </text>
            </g>
            <g
              data-edge-id="e-2"
            >
              <line
                class="transition-all duration-[var(--duration-fast)]"
                marker-end="url(#arrowhead)"
                opacity="0.7"
                stroke="var(--color-fg-subtle)"
                stroke-width="1"
                x1="320"
                x2="420"
                y1="200"
                y2="360"
              />
              <rect
                fill="var(--color-bg-base)"
                height="16"
                rx="4"
                ry="4"
                stroke="transparent"
                stroke-width="1"
                width="32"
                x="354"
                y="272"
              />
              <text
                class="select-none pointer-events-none"
                dominant-baseline="central"
                fill="var(--color-fg-subtle)"
                font-family="var(--font-family-ui)"
                font-size="10"
                text-anchor="middle"
                x="370"
                y="280"
              >
                参与
              </text>
            </g>
          </svg>
          <div
            class="w-12 h-12 flex items-center justify-center bg-[var(--color-bg-surface)] border absolute cursor-grab transition-[box-shadow,transform] duration-[var(--duration-normal)] z-10 select-none active:cursor-grabbing rounded-full"
            data-node-id="n-1"
            style="top: 200px; left: 320px; transform: translate(-50%, -50%); border-color: var(--color-node-character);"
          >
            <div
              class="flex items-center justify-center "
            >
              <span
                class="text-sm font-medium"
                style="color: var(--color-node-character);"
              >
                林
              </span>
            </div>
            <div
              class="absolute top-14 left-1/2 -translate-x-1/2 text-[11px] whitespace-nowrap px-1.5 py-0.5 rounded pointer-events-none text-[var(--color-fg-default)] opacity-90 transition-opacity duration-[var(--duration-fast)]"
              style="background-color: color-mix(in srgb, var(--color-bg-base) 80%, transparent);"
            >
              林远
            </div>
          </div>
          <div
            class="w-12 h-12 flex items-center justify-center bg-[var(--color-bg-surface)] border absolute cursor-grab transition-[box-shadow,transform] duration-[var(--duration-normal)] z-10 select-none active:cursor-grabbing rounded-lg"
            data-node-id="n-2"
            style="top: 180px; left: 520px; transform: translate(-50%, -50%); border-color: var(--color-node-location);"
          >
            <div
              class="flex items-center justify-center "
            >
              <svg
                class="w-5 h-5"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                style="color: var(--color-node-location);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
            </div>
            <div
              class="absolute top-14 left-1/2 -translate-x-1/2 text-[11px] whitespace-nowrap px-1.5 py-0.5 rounded pointer-events-none text-[var(--color-fg-default)] opacity-90 transition-opacity duration-[var(--duration-fast)]"
              style="background-color: color-mix(in srgb, var(--color-bg-base) 80%, transparent);"
            >
              旧港
            </div>
          </div>
          <div
            class="w-12 h-12 flex items-center justify-center bg-[var(--color-bg-surface)] border absolute cursor-grab transition-[box-shadow,transform] duration-[var(--duration-normal)] z-10 select-none active:cursor-grabbing rounded-lg rotate-45"
            data-node-id="n-3"
            style="top: 360px; left: 420px; transform: translate(-50%, -50%) rotate(45deg); border-color: var(--color-node-event);"
          >
            <div
              class="flex items-center justify-center -rotate-45"
            >
              <svg
                class="w-5 h-5"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                style="color: var(--color-node-event);"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12.01"
                  y1="16"
                  y2="16"
                />
              </svg>
            </div>
            <div
              class="absolute top-14 left-1/2 -translate-x-1/2 text-[11px] whitespace-nowrap px-1.5 py-0.5 rounded pointer-events-none text-[var(--color-fg-default)] opacity-90 transition-opacity duration-[var(--duration-fast)] -rotate-45 top-[60px]"
              style="background-color: color-mix(in srgb, var(--color-bg-base) 80%, transparent);"
            >
              废弃仓库事件
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute bottom-6 right-6 z-30"
      >
        <div
          class="bg-[var(--color-bg-surface)] border border-[var(--color-border-default)] rounded p-3 flex flex-col gap-2 "
        >
          <div
            class="text-[10px] uppercase tracking-wider text-[var(--color-fg-subtle)] font-medium mb-1"
          >
            Graph Legend
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-2 h-2 border rounded-full"
              style="border-color: var(--color-node-character); background-color: color-mix(in srgb, var(--color-node-character) 10%, transparent);"
            />
            <span
              class="text-[11px] text-[var(--color-fg-muted)]"
            >
              Character
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-2 h-2 border rounded-sm"
              style="border-color: var(--color-node-location); background-color: color-mix(in srgb, var(--color-node-location) 10%, transparent);"
            />
            <span
              class="text-[11px] text-[var(--color-fg-muted)]"
            >
              Location
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-2 h-2 border rounded-sm rotate-45"
              style="border-color: var(--color-node-event); background-color: color-mix(in srgb, var(--color-node-event) 10%, transparent);"
            />
            <span
              class="text-[11px] text-[var(--color-fg-muted)]"
            >
              Event
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-2 h-2 border rounded-full"
              style="border-color: var(--color-node-item); background-color: color-mix(in srgb, var(--color-node-item) 10%, transparent);"
            />
            <span
              class="text-[11px] text-[var(--color-fg-muted)]"
            >
              Item
            </span>
          </div>
        </div>
      </div>
      <div
        class="absolute bottom-6 left-6 z-30"
      >
        <button
          aria-label="Add node"
          class="w-10 h-10 rounded-full bg-[var(--color-fg-default)] text-[var(--color-fg-inverse)] hover:bg-[var(--color-fg-muted)] shadow-lg flex items-center justify-center transition-transform hover:scale-105"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </button>
      </div>
    </main>
  </div>
</div>
`;
